--- a/facebook.html
+++ b/facebook.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="youtube">
-    <a href="https://www.youtube.com/user/cursoemvideo/playlists" target="_blank">ACESSE</a>
+    <img src="imagens/tela-facebook.jpg" alt="Facebook">
+    <a href="https://www.facebook.com" target="_blank">ACESSE</a>
 </body>
 </html>
