--- a/github.html
+++ b/github.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="youtube">
-    <a href="https://www.youtube.com/user/cursoemvideo/playlists" target="_blank">ACESSE</a>
+    <img src="imagens/tela-github.jpg" alt="github">
+    <a href="https://www.github.com/antoniorodriguesdev" target="_blank">ACESSE</a>
 </body>
 </html>
