--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         
         </section>
         <section id="social">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="home.html" target="home"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
             <a href="youtube.html" target="home"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="github.html" target="home"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
+            <a href="instagram.html" target="home"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="twitter.html" target="home"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="facebook.html" target="home"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
 
         </section>
 
