--- a/instagram.html
+++ b/instagram.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube</title>
+    <title>Instagram</title>
     <style>
 
         *{
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="youtube">
-    <a href="https://www.youtube.com/user/cursoemvideo/playlists" target="_blank">ACESSE</a>
+    <img src="imagens/tela-instagram.jpg" alt="Instagram">
+    <a href="https://www.instagram.com" target="_blank">ACESSE</a>
 </body>
 </html>
