adicionado efeito no botão 'acesse'

--- a/home.html
+++ b/home.html
@@ -20,7 +20,9 @@ body>img{
     width: 94vw;
     position: fixed;
 }
-
+body>a:hover{
+            background-color: red;
+        }
 
 </style>
 <body>
