--- a/youtube.html
+++ b/youtube.html
@@ -36,6 +36,9 @@
             padding: 20px 0px;
             margin-top: -5px;
         }
+        body>a:hover{
+            background-color: red;
+        }
         
 
     </style>
